--- a/static/css/list.css
+++ b/static/css/list.css
@@ -3,14 +3,9 @@ body {
 
 .emote-column {
 	width: 80px;}
-.center, th {
-	text-align: center;}
 table {
 	border-spacing: 0;
 	border-collapse: collapse;}
-img { /* TODO use media queries or relative units for this */
-	max-height: 32px;
-	max-width: 32px;}
 td, th {
 	border: solid 2px;
 	padding: .2em .5em;}
